--- a/styles/style.css
+++ b/styles/style.css
@@ -1088,7 +1088,7 @@ body {
 
 .certificate-image {
   width: 36.7vw;
-  min-width: 335px;
+  min-width: 260px;
   height: auto;
   border: 1px solid #E5E8ED;
   box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.16), 0px 30px 24px -10px rgba(154, 156, 165, 0.1), 0px 12px 10px -6px rgba(154, 156, 165, 0.08), 0px 4px 4px -4px rgba(30, 33, 44, 0.05);
@@ -1097,6 +1097,7 @@ body {
 
 .accreditation-list {
   display: flex;
+  flex-wrap: wrap;
   padding: 0;
   margin: 0;
   gap: 40px;
@@ -1934,6 +1935,11 @@ body {
   width: 100%;
   align-items: center;
   margin-bottom: 24px;
+}
+
+.checker {
+  padding: 0;
+  margin: 0;
 }
 
 .modal-check .field-label {
